Bug 194638. *Always* request invalidation of child widgets when we resize a widget. r+sr+a=dbaron